Added google fonts and updated for css

--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,200&family=Merriweather:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Assignment 1</title>
+    <title>Note Making</title>
 </head>
 <body>
     <div class="container1">
-        <div class="item header">        
+        <div class="header">        
             <nav>
                 <ul class="menu">
                     <li class="nlist"><a href="">Docs</a></li>
                     <li class="nlist"><a href="">About</a></li>
                 </ul>
             </nav></div>
-        <div class="item sidebar">
-            <div class="slbuttonclose1"><button class="bt2" type="button">>></button>
-            </div>
+            <div class="sidebar"><div class="slbuttonclose1"><button class="bt" type="button">>></button></div>
         </div>
-        <div class="item content"><button class="bt" type="button"><a href="notes.html"> + Create New Notes</a></button></div>
-        <div class="item footer1">© Sandeep Kaur</div>
+        <div class="content"><button class="bt" type="button"><a href="notes.html">Create New Notes</a></button></div>
+        <div class="footer">©Sandeep Kaur</div>
 </body>
 </html>
