Fixed atag for note.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav></div>
             <div class="sidebar"><div class="slbuttonclose1"><button class="bt" type="button">>></button></div>
         </div>
-        <div class="content"><button class="bt" type="button"><a href="notes.html">Create New Notes</a></button></div>
+        <div class="content"><button class="bt" type="button"><a href="note.html">Create New Notes</a></button></div>
         <div class="footer">©Sandeep Kaur</div>
 </body>
 </html>
