Fixed a tag for note.html

--- a/note.html
+++ b/note.html
@@ -26,10 +26,10 @@
                 <li class="nlist"><a href="">Note Two</a></li>
             </ul></div>
         <div class="content">
-            <div><button class="bt"><a href="notes.html">+</a></button></div>
+            <div><button class="bt"><a href="note.html">+</a></button></div>
             <div><textarea class ="addnotes" name="addnotes"placeholder="Write your note here"></textarea></div>
-            <button class="bt"><a href="notes.html">Save</a></button>
-            <button class =bt><a href="notes.html">Delete</a></button>
+            <button class="bt"><a href="note.html">Save</a></button>
+            <button class =bt><a href="note.html">Delete</a></button>
         </div>
         <div class="footer">©Sandeep Kaur</div>
 </body>
